fixed submit button formatting on mobile

--- a/WhoDares/Style.css
+++ b/WhoDares/Style.css
@@ -67,5 +67,5 @@ and open the template in the editor.
     width:100%;
 }
 #submitBtn{
-    width:10vw;
+    width:34vw;
 }
